--- a/event.html
+++ b/event.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a New Event</title>
+    <title>Practice Lab 1</title>
     <link href="css/style.css" rel="stylesheet">
     <script src="js/script.js"></script>
 </head>
