--- a/event.html
+++ b/event.html
@@ -30,6 +30,9 @@
                 <!--
                     Seeing if this will work.
                 -->
+                <!--
+                    Second try. Hope it works.
+                -->
             
                 Event Dates: <input type="text" id="dates" size="10" name="fromDate" pattern="^(0[1-9]|[12][0-9]|3[01])[/](0[1-9]|1[012])[/](20)\d\d$" placeholder="dd/mm/yyyy" >
                 to <input type="text" name="toDate" size="10" pattern="^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[/](20)\d\d$" placeholder="dd/mm/yyyy" >
