added another option in EventTypes

--- a/event.html
+++ b/event.html
@@ -18,6 +18,7 @@
                 <option value="General Assembly">General Assembly</option>
                 <option value="Workshop">Workshop</option>
                 <option value="Fundraising">Fundraising</option>
+                <option value="Sponsorship">Sponsorship</option>
             </select> <br><br>
             
             <!-- EVENT TITLE -->
