placement of created by Group 3

--- a/event.html
+++ b/event.html
@@ -55,7 +55,7 @@
             <input type="checkbox" id="moreDetails5">Is There a Hosting Command Point of Contact?<br><br><br>
                 <input type="submit" id="submit" value="Save">
                 <input type="reset" id="cancel" value="Cancel">
-                <p>Created by Group 3</p>
+                <pre>                                                                                                                   Created by Group 3</pre>
                 </div>
             </fieldset>
         </form>
