added options in the event types

--- a/event.html
+++ b/event.html
@@ -19,6 +19,7 @@
                 <option value="Workshop">Workshop</option>
                 <option value="Fundraising">Fundraising</option>
                 <option value="Sponsorship">Sponsorship</option>
+                <option value="Others">Others</option>
             </select> <br><br>
             
             <!-- EVENT TITLE -->
