change choose one to hidden

--- a/event.html
+++ b/event.html
@@ -13,7 +13,7 @@
             <legend id="eventDetails">Create a New Event</legend>
             <div class="innerForm">
             Event Types: <select name="eventTypes" id="eventTypes" required>
-                <option value="" disabled selected>Choose one</option>
+                <option hidden="Choose One" value="">Choose One</option>
                 <option value="Webinar">Webinar</option>
                 <option value="General Assembly">General Assembly</option>
                 <option value="Workshop">Workshop</option>
